feat: fix limitations; update tasks, approaches and contribution

--- a/mtrf.tex
+++ b/mtrf.tex
@@ -73,26 +73,20 @@ Since both raw words and semantic role labels are symbols, it has limited repres
 \begin{table}[t]
 \centering
 \begin{tabular}{l|ll}
-\textbf{Event 1}    &   \textbf{Event 2}    &   \textbf{Similarity} \\
-                    &   \textbf{Foil Event} &   \textbf{Similarity} \\  \hline
-(investor, buy, share)      &   (investor, purchase, share)     &   0.96    \\
-                            &   (share, purchase, investor)     &   0.81    \\    \hline
-(employee, buy, property)   &   (employee, purchase, property)  &   0.95    \\
-                            &   (property, purchase, employee)  &   0.80    \\    \hline
-(supporter, buy, ticket)    &   (supporter, purchase, ticket)   &   0.96    \\
-                            &   (ticket, purchase, supporter)   &   0.83    \\
+\textbf{Target Event}    &   \textbf{Foil Event}    &   \textbf{Similarity} \\  \hline
+(machine, run, program)      &   (program, run, machine)     &   0.96    \\
+   \hline
+(mother, supply, baby)   &   (baby, supply, mother)  &   0.95    \\
+  \hline
+(firm, buy, politician)    &   (politician, buy, firm)   &   0.91    \\
 \end{tabular}
 \caption{\label{tab:eventsim} Some examples of similarity scores between two events using event embedding vectors in NNRF model. The metric is cosine similarity. }
 \end{table}
 
 \subsection{Main Problem and Previous Work} \label{sec:previous}
-The main problem is that only a few works learn embeddings at the level of events. \citet{tilk2016event} proposed two models to learn a representation of events and their participants. To obtain a probability distribution over \textit{role-fillers} given event information, the models aim to perform \textit{role-filler prediction}: 
-\begin{itemize}
-    \item  In each event, given the role label of one target word, and also given all other words and their role labels, the task is to predict the target word to fill the target role,
-\end{itemize}
-where the verbal predicate is considered as a special role $verb$ which is not in PropBank style semantic roles. The representation, named as \textit{role-specific word embedding}, learnt by those models is organised into an order-3 tensor. This means that for each word and each role, there is an embedding vector. To reduce the number of parameters, they factored the tensor into three matrices. They reported great improvement over previous systems on thematic fit evaluation and competitive performance on event similarity evaluation. 
+The main problem is that only a few works learn embeddings at the level of events. \citet{tilk2016event} proposed a model to learn a representation of events and their participants. To obtain a probability distribution over \textit{role-fillers} given event information, the models aim to perform \textit{role-filler prediction}: in each event, given the role label of one target word, and also given all other words and their role labels, the task is to predict the target word to fill the target role. The verbal predicate is considered as a special role $verb$ which is not in PropBank style semantic roles. The representation, named as \textit{role-specific word embedding}, learnt by those models is organised into an order-3 tensor. This means that for each word and each role, there is an embedding vector. To reduce the number of parameters, they factored the tensor into three matrices. 
 
-However, there are some limitations in their work. Firstly, there is a problem of event embedding similarity if we only focus on role-filler prediction. Because of the smoothing effect of distributed representation, the event embeddings with same argument words but different roles can be very similar to each other. For example, considering a target event $([_{\texttt{ARG0}} \text{investor}], buy, [_{\texttt{ARG1}}\text{share}])$ and the foil event $([_{\texttt{ARG0}}\text{share}], purchase, [_{\texttt{ARG1}}\text{investor}])$, the model shows high similarity score between them. The foil event is unlikely to happen in real world, so human will have a lower similarity judgement score between it and the target event. But for the similar event $([_{\texttt{ARG0}}\text{investor}], purchase, [_{\texttt{ARG1}}\text{share}])$ and the original event, human will have a high similarity judgement score. So the NNRF model is incompatible with human cognition. More examples are shown in Table \ref{tab:eventsim}. 
+However, there are some limitations in their work. Firstly, there is a problem of \textbf{event embedding similarity}: the event embeddings with same argument words but different roles can be very similar to each other. For example, considering a target event $([_{\texttt{ARG0}} \text{investor}], buy, [_{\texttt{ARG1}}\text{share}])$ and the foil event $([_{\texttt{ARG0}}\text{share}], buy, [_{\texttt{ARG1}}\text{investor}])$, the model shows high similarity score between them. The foil event is unlikely to happen in real world, so human has a low similarity judgement score between it and the target event. But the model has a high similarity judgement score. So in this condition, their model is incompatible with human cognition. This is due to the smoothing effect of distributed representation. Their event embeddings are simply constructed as the sum of role-filler embeddings in each event. For events with a same set of words but different roles, features that characterize the event can be cancelled out during the composition of role-fillers. More examples are shown in Table \ref{tab:eventsim}. 
 % * <asayeed@mbl.ca> 2017-11-13T22:30:35.273Z:
 % 
 % "based" event? ("foil" is pretty clear)
@@ -109,9 +103,7 @@ However, there are some limitations in their work. Firstly, there is a problem o
 
 In addition to that, although the tensor-like structure of embedding is efficient and flexible, the training of the models are burdened by the gradient explosion or vanishing problem. Because in a factored order-3 tensor, each parameter is represented by a product of three parameters. To tackle this problem from the training aspect, they used Adagrad \citep{duchi2011adaptive} which adjusts learning rate during training. Although it alleviated the problem, it is not a solution on model architecture aspect. 
 
-Furthermore, the factored order-3 tensor structure is not fully explained. Along with the rapid growth of architecture complexity, explainability of models is becoming more and more important. Yet they did not give a thorough explanation of the word embedding they obtained. Moreover, there is no evaluation of their word embedding. As a result, it is risky to use the embedding on other tasks. 
-
-Last but not least, the definition of the notion \textit{role} is vague. It is hard to explain why predicates and semantic arguments are treated as the same, though they have a special role $verb$ for verbal predicates. This leads to an ambiguous definition of \textit{role-filler} which originally means the argument to fill one specific semantic role. 
+Furthermore, the factored order-3 tensor structure is not fully explained. Along with the rapid growth of architecture complexity, explainability of models is becoming more and more important. Yet they did not give a thorough explanation of the word embedding they obtained. Also there is no evaluation of their word embedding. Last but not least, the definition of the notion \textit{role} is vague, though they have a special role $verb$ for verbal predicates. This leads to an ambiguous definition of \textit{role-filler} which originally means the argument to fill one specific semantic role. 
 % * <asayeed@mbl.ca> 2017-11-13T22:29:40.729Z:
 % 
 % Well I don't know if they're "major" disadvantages :)
@@ -127,24 +119,30 @@ Last but not least, the definition of the notion \textit{role} is vague. It is h
 % ^ <xhong@coli.uni-saarland.de> 2017-11-17T15:10:36.118Z.
 
 
-\subsection{Major Tasks} \label{sec:tasks}
-In this paper, we present several multi-task neural network models to learn embeddings at the inner level of an event. With a view to the explainability of the task, we separate \textit{role-filler prediction} into two sub-tasks: 
+\subsection{Main Goals} \label{sec:tasks}
+In this paper, we aim to to tackle the event embedding similarity problem and obtain an explainable representation of inner event structure with higher quality. In order to tackle the event embedding similarity problem stated above, we need to train a model to discriminate different roles given same set of words. Besides we want to remain the smoothness of distributed representation of event. For these purposes, we design a training task which is: 
+\begin{itemize}
+  \item  \textbf{Semantic role prediction}: in each event, given one target word, and all other words and their semantic role labels, the task is to predict the target semantic role label. 
+\end{itemize}
+where we define \textbf{semantic roles} as a set which contains semantic roles in PropBank style for event participants and a special semantic role for predicates to get rid of ambiguity. We believe that by forcing the models to solve semantic role prediction during training, the event embeddings with same words but different roles will be distinguished. 
+
+It has been shown that priming effect can be found in the directions of both predicate-to-participant and participant-to-predicate (see Section \ref{sec:event}). Since lexical features of participant and predicate are homogeneous, we can consider each of them as a word. With a view to the explainability of the task, we separate \textit{role-filler prediction} into two sub-tasks: 
 \begin{itemize}
   \item  \textbf{Participant prediction}: in each event, given the predicate, the semantic role label of one target participant, the other participants and their semantic role labels, the task is to predict the target participant to fill the semantic role. 
   \item  \textbf{Predicate prediction}: in each event, given all participants and their semantic role labels, the task is to predict the predicate. 
 \end{itemize}
-Since lexical features of participant and predicate are homogeneous, we can consider each of them as a word. To get rid of ambiguity, we define \textbf{semantic role labels} as a set which contains semantic role labels in PropBank style for event participants and a special semantic role label for predicates. In order to tackle the similarity problem in event embedding stated above, we add one more auxiliary task which is: 
-\begin{itemize}
-  \item  \textbf{Semantic role prediction}: in each event, given one target word, and all other words and their semantic role labels, the task is to predict the target semantic role label. 
-\end{itemize}
-By forcing the models to solve semantic role prediction during training, the event embeddings with same words but different roles will be distinguished. 
 
-\subsection{Model Design and Experiments} \label{sec:steps}
-Inspired by the role-specific word embedding, we define the \textbf{event-participant embedding} formally as the joint embedding of predicates that denote events and participants of events. The embedding vectors are stacked together to construct an order-3 tensor where each vector is indexed by a 2-tuple $(word, role\ label)$. As a result, each word can be represented as a matrix, indexed by a 1-tuple $(word)$, which can be considered as word embedding (see Section \ref{sec:epe}). Although the event-participant embedding is a versatile representation, it suffers curse of dimensionality. So we apply tensor factorisation on the event-participant embedding tensor, which represents the tensor with three matrices. After detailed analysis in the tensor space, we demonstrate that these matrices can be interpreted as word embedding, semantic role label embedding and weight of linear mapping correspondingly (see Section \ref{sec:tf}). 
+Although we have three different tasks, multi-task learning is an effective approach to learn a join model to solve them at the same time \citep{caruana1998multitask}. By learning three tasks in parallel with a shared embedding of event predicates and participants, we can obtain a model to achieve our main goals. 
 
-Using the same event-participant embedding as input, we add non-linearity to the models to construct multi-task neural networks. To perform both role-filler prediction and semantic role prediction, we design two classifiers with their own loss functions. The models are optimised with different weight of each task (see Section \ref{sec:mtrf}). We find that tuning the loss weight results in models having their own advantages in different aspects. When it comes to the construction of event representation, there are two cases: participant order is known or unknown. In order to build a model which is compatible with first-order logic representation where conjunction connective does not imply order, we focus on the case that participant order is not given. After comparing several composition methods, we present an effective method to compose the event-level embedding using features from the hidden layer (see Section \ref{sec:bop}). It has been shown that gradient exploding or vanishing problem is more serious in training model with factorised tensors \citep{sutskever2011generating}.  Making use of the idea in residual learning, we add one skip connection inside the factor tensor (see Section \ref{sec:residual}). We find that this method can help with learning a better event-participant embedding.
 
-To compare with previous baselines, all models are trained, validated and tested on the same large scale corpus. We tune hyper-parameters to optimise for different purposes (see Section \ref{sec:exp}). On both three tasks, we compute the perplexity for each model(see Section \ref{sec:wordprediction}, \ref{sec:roleprediction}). The output probabilities of the models on word prediction are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). Last but not least, the event embeddings are evaluated on an event similarity correlation task (see Section \ref{sec:eventsim}). The results show that our models have significant improvement over the current best system on specific evaluations while has state-of-the-art performance on the other evaluations. The word embedding and event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance. 
+\subsection{Key Approaches} \label{sec:approaches}
+We present several multi-task neural network models to solve both predicate prediction, participant prediction and semantic role prediction. To obtain an explainable event level embedding, we define the \textbf{event-participant embedding} formally as the joint embedding of predicates that denote events and participants of events. The embedding vectors are stacked together to construct an order-3 tensor where each vector is indexed by a 2-tuple $(word,\ semantic\ role)$. As a result, each word can be represented as a matrix, indexed by a 1-tuple $(word)$, which can be considered as word embedding (see Section \ref{sec:epe}). To handle the curse of dimensionality, we apply tensor factorisation on the event-participant embedding tensor, which represents the tensor with three matrices. After detailed analysis in the tensor space, we demonstrate that these three matrices can be interpreted as word embedding, semantic role embedding and weight of linear mapping correspondingly (see Section \ref{sec:tf}). 
+
+To extract event level information from text and to compare with previous baselines, we use a large scale corpus RW-eng providing access to generalized event knowledge (see Section \ref{sec:corpus}). Using the shared event-participant embedding as input, we add non-linearity layers to the model to construct a multi-task neural network name \textbf{multi-task event predicate-participants (MTEP)} model. We design two classifiers with their own loss functions. One is for predicate prediction and participant prediction. The other one is for semantic role prediction. The models are optimised with different weight of each task (see Section \ref{sec:mtrf}). To improve the composition method and reduce its effect on event embedding similarity problem, we discuss on several possible composition methods. We present an effective method to compose the event-level embedding using features from the hidden layer and design the \textbf{bag-of-predicate-participants (BOP)} model. The new composition method results in better event-participant embedding  (see Section \ref{sec:bop}). To handle the gradient explosion/vanishing problem in the training of factored tensor structure, we integrate the residual learning framework into our model. We add one skip connection inside the factor tensor to construct a residual block (see Section \ref{sec:residual}). This method further improve the performance of the model. 
+
+
+\subsection{Experiments and Evaluations} \label{sec:eval-steps}
+We tune hyper-parameters to optimise for different objectives (see Section \ref{sec:exp}). On both three tasks, we compute the perplexity for each model(see Section \ref{sec:wordprediction}, \ref{sec:roleprediction}). The output probabilities of the models on word prediction are evaluated on human thematic fit judgement correlation task (see Section \ref{sec:thematicfit}). The word embeddings are evaluated on several word similarity tasks (see Section \ref{sec:wordsim}). Last but not least, the event embeddings are evaluated on an event similarity correlation task (see Section \ref{sec:eventsim}). The results show that our models have significant improvement over the current best system on specific evaluations while has state-of-the-art performance on the other evaluations. The event embedding extracted from the event-participant embedding we learnt also has state-of-the-art performance on event similarity correlation task. 
 % * <asayeed@mbl.ca> 2017-11-13T22:34:00.165Z:
 % 
 % This is a very thorough high-level overview, but it's easy to get lost.  Maybe put in some subsections or bullet points?
@@ -159,8 +157,9 @@ To compare with previous baselines, all models are trained, validated and tested
 %
 % ^.
 
+
 \subsection{Contribution} \label{sec:contribution}
-Our model is a state-of-the-art system of thematic fit correlation task. The selectional preference features are useful for referent prediction in discourse-level \citep{modi2017modeling}. In simultaneous machine translation between language pairs with different verb position, adding predicate prediction leads to better translations \citep{grissom2014don}. The word embedding we learn can be further employed in discourse relation classification \citep{shi2017need, rutherford2017systematic}, paraphrase detection, word sense disambiguation, sentiment analysis and machine translation. The composite embedding of predicate and target head word can be used for argument classification in semantic role labelling \citep{roth2016neural}. Further, this model can be employed in incremental semantic parsing \citep{konstas2014incremental, konstas2015semantic} or inferences of logical forms (TODO: add ref). 
+Our model is a state-of-the-art system of thematic fit correlation task. The selectional preference features are useful for referent prediction in discourse-level \citep{modi2017modeling}. In simultaneous machine translation between language pairs with different verb position, adding predicate prediction leads to better translations \citep{grissom2014don}. The word embedding we learn can be further employed in discourse relation classification \citep{shi2017need, rutherford2017systematic}, paraphrase detection, word sense disambiguation, sentiment analysis and machine translation. The composite embedding of predicate and target head word can be used for argument classification in semantic role labelling \citep{roth2016neural}. 
 
 
 
