--- a/mtrf.tex
+++ b/mtrf.tex
@@ -181,7 +181,7 @@ LOCATION                &   The location or spatial orientation of the event \\
 
 
 \subsection{Event Knowledge} \label{sec:event}
-In psycholinguistics and cognitive science, experiments have shown that event knowledge plays a crucial role in human sentence processing \citep{camblin2007interplay}. On one hand, predicates prime event participant referring to good fillers of their semantic role in an event \citep{ferretti2001integrating}. On the other hand, priming effect can be also found from event participants to predicates \citep{mcrae2005basis}. These two works reveal that model performances of predicate prediction and participant prediction can be evaluated via correlation with human judgement. 
+In psycholinguistics and cognitive science, experiments have shown that event knowledge plays a crucial role in human sentence processing \citep{camblin2007interplay}. On one hand, predicates prime event participants referring to good fillers of their semantic role in an event \citep{ferretti2001integrating}. On the other hand, priming effect can be also found from event participants to predicates \citep{mcrae2005basis}. These two works reveal that model performances of predicate prediction and participant prediction can be evaluated via correlation with human judgement. 
 
 In a wider range, event-level information affects verbal arguments processing of human \citep{bicknell2010effects}. Comprehenders integrate information not only from predicate but also other event participants mentioned in discourse. Although there are plenty of results from different forms of psycholinguistic experiments like event-related potential, eye-tracking and human judgement, most of these experiments have a relatively small size of evaluation entries and a limited number of participants. It has been shown that corpus-based method can be considered as a large-scale simulation of human acquisition of linguistic or conceptual information from the world \citep{landauer1997solution}. To verify the results from psycholinguistic experiments, it is necessary to build corpus-based cognitive models of events. 
 
@@ -269,7 +269,7 @@ After many years of research, pre-trained semantic role labelling systems are qu
 
 More recently, \citet{lei-EtAl:2015:NAACL-HLT} employ low-rank tensor factorisation to induce a compact representation of the full cross product of atomic features. \citet{roth2016neural} proposed PathLSTM which made use of dependency path as input. \citet{marcheggiani2017simple} claimed that syntactic features are not necessary for semantic role labelling and proposed a deep LSTM model to obtain competitive performance. 
 
-However, most of these works only assign labels to whole constituents instead of syntactic heads that are denoting event participants. \citet{SayeedEtAl2015} proposed an unsupervised method of assigning semantic roles to syntactic heads in arguments. The semantic role labels are extracted using SENNA. Then the head nouns are extracted from arguments using Malt Parser, a state-of-the-art dependency parser \citep{nivre2006maltparser}, together with hand-crafted heuristics. The annotated corpus they constructed is named as \textbf{RW-eng}. 
+However, most of these works only assign labels to whole constituents instead of syntactic heads that are denoting event participants. \citet{SayeedEtAl2015} proposed an unsupervised method of assigning semantic roles to syntactic heads in arguments. The semantic role labels are extracted using SENNA. Then the head nouns are extracted from arguments using Malt Parser, a state-of-the-art dependency parser \citep{nivre2006maltparser}, together with hand-crafted heuristics. 
 
 
 \subsection{Distributional Semantic Model} \label{sec:dsm}
@@ -300,24 +300,7 @@ The distributed representation of words, popularly known as word embedding, can 
 
 \newpage
 \section{Representation of Predicates and Participants}
-We intend to learn meaningful representation of event structure in semantic space. In \textit{neo-Davidsonian event representation}, we notice that linguistic predicates can be further generalised. So we define a special role \texttt{PRD} for predicates. The example \ref{eg:neodavidsonian} can be rewritten as: 
-\begin{equation*} \label{eg:symbolic-thematic}
-\begin{aligned}
-    \exists e\ \texttt{PRD}(e, \text{cut})
-    & \land \texttt{AGENT}(e, \text{cook}) \land \texttt{PATIENT}(e, \text{cake}) \\
-    & \land \texttt{INSTRUMENT}(e, \text{knife}) \land \texttt{LOCATION}(e, \text{kitchen}) \\
-\end{aligned}
-\end{equation*}
-
-If we specify the sense of the predicate $cut$, thematic roles can be replaced with PropBank style semantic roles as: 
-\begin{equation*} \label{eg:symbolic-semantic}
-\begin{aligned}
-    \exists e\ \texttt{PRD}(e, \text{cut.01})
-    & \land \texttt{ARG0}(e, \text{cook}) \land \texttt{ARG1}(e, \text{cake}) \\
-    & \land \texttt{ARGM-MNR}(e, \text{knife}) \land \texttt{ARGM-LOC}(e, \text{kitchen}) \\
-\end{aligned}
-\end{equation*}
-This is a representation of the event in first order logic. We define a semantic role model for this paper. We join PropBank semantic roles and the special role \texttt{PRD} together as semantic roles. So the semantic role labels we use in this paper are defined in Table \ref{tab:semantic}. As we mention in Section \ref{sec:intro}, semantic arguments can be represented by the syntactic head words, so the notion of \textit{argument} in PropBank role labels is replaced by \textit{event participant}. 
+We intend to learn meaningful representation of event structure in semantic space. Thus we define a semantic role model for this paper. We join PropBank semantic roles and the special role \texttt{PRD} together as semantic roles. So the semantic role labels we use in this paper are defined in Table \ref{tab:semantic}. As we mention in Section \ref{sec:intro}, semantic arguments can be represented by the syntactic head words, so the notion of \textit{argument} in PropBank role labels is replaced by \textit{event participant}. 
 % * <asayeed@mbl.ca> 2017-11-13T22:45:29.318Z:
 % 
 % Again do we need to commit to this kind of representation here?  I'm not saying categorically not to do it, merely that it needs to be justified.
@@ -924,7 +907,27 @@ Human       &       -   &   -       &   -       &   67  \\
 
 
 \section{Related Works}
+\section{Future Works}
+This model can be employed in incremental semantic parsing \citep{konstas2014incremental, konstas2015semantic} or inferences of logical forms (TODO: add ref). 
 
+In \textit{neo-Davidsonian event representation}, we notice that linguistic predicates can be further generalised. So we define a special role \texttt{PRD} for predicates. The example \ref{eg:neodavidsonian} can be rewritten as: 
+\begin{equation*} \label{eg:symbolic-thematic}
+\begin{aligned}
+    \exists e\ \texttt{PRD}(e, \text{cut})
+    & \land \texttt{AGENT}(e, \text{cook}) \land \texttt{PATIENT}(e, \text{cake}) \\
+    & \land \texttt{INSTRUMENT}(e, \text{knife}) \land \texttt{LOCATION}(e, \text{kitchen}) \\
+\end{aligned}
+\end{equation*}
+
+If we specify the sense of the predicate $cut$, thematic roles can be replaced with PropBank style semantic roles as: 
+\begin{equation*} \label{eg:symbolic-semantic}
+\begin{aligned}
+    \exists e\ \texttt{PRD}(e, \text{cut.01})
+    & \land \texttt{ARG0}(e, \text{cook}) \land \texttt{ARG1}(e, \text{cake}) \\
+    & \land \texttt{ARGM-MNR}(e, \text{knife}) \land \texttt{ARGM-LOC}(e, \text{kitchen}) \\
+\end{aligned}
+\end{equation*}
+This is a representation of the event in first order logic. 
 
 
 \section{Conclusion} 
@@ -932,7 +935,6 @@ Human       &       -   &   -       &   -       &   67  \\
 
 
 
-\subsection{Future Works}
 
 
 
